--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ p {
   display: flex;
   gap: 15px;
   margin-bottom: 30px;
+  align-items: center;
 }
 
 .icon-link, .icon-link:visited {
@@ -76,6 +77,10 @@ p {
 .link {
   color: #ffffff;
   text-decoration: none;
+}
+
+.link.cv {
+  margin-left: 20px;
 }
 
 .link:hover {
@@ -132,3 +137,33 @@ p {
   transform-origin: 16px 16px;
 }
 
+@keyframes thought-animation {
+  0% {
+    opacity: 0;
+    transform: translate(10px, 0);
+  }
+  5% {
+    opacity: 1;
+    transform: translate(-5px, 0);
+  }
+  95% {
+    opacity: 1;
+    transform: translate(-95px, 0);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-110px, 0);
+  }
+}
+
+.thought {
+  position: fixed;
+  border: 1px solid #ffffff33;
+  border-radius: 30px;
+  animation: thought-animation 5.3s linear forwards;
+  font-family: sans-serif;
+  font-size: 0.8em;
+  padding: 5px 15px;
+  white-space: nowrap;
+  backdrop-filter: blur(5px);
+}
